  are also used already for the environment lighting. The benefit of using them is that the reflections are view dependent and that they can match
  the table environment lighting image for full consistency between the lighting and reflections.

- timers with a -1 interval used to be ran 1 or 2 times per frame (depending on user latency reduction setting). They now are always ran once per frame only.
  timers with a -2 interval are now considered as controller sync timers and will be ran as many time per frame as needed, depending on user settings.

- a new folder named 'Cache' was added to VPX's main directory for caching data to improve performance. For the time being, it is used to store the list of textures which are used 
  by each table during play. This allows for preloading of the needed textures when a table is started, limiting stutters during play.

- add an option to primitives to toggle 'depth masking', which is otherwise used during rendering to hide all parts behind the primitive. If unchecked, the primitive will not hide parts behind it and it will also not be visible to ambient occlusion.
  For example, this is needed to employ primitives to render user/fake shadows without breaking ambient occlusion, or for transparents part with self overlapping parts like plastic ramps.

- as the script is initially started, the Init events are now called *before* the static parts are prerendered.
  This allows a table script to adjust the properties of static parts during startup.

- video synchronization and target frame rate are now 2 separate settings and a new video synchronization mode for low latency input/physics/rendering has been added. The choices are:
  - None: no synchronization, VPX just runs as fast as possible. Unless when playing on a very powerful system, this should lead to some input latency (due to lack of input syncing) and render latency 
          (due to flooding the GPU frame queue). This setting used to be 'Adaptive Sync: 0'